tests/capture_avoid/capture_avoid.exp
Error ----------------------------------------------------------------------------------------------------- cap.js:22:12

Cannot return `p` because `L` [1] is incompatible with `P` [2] in type argument `R` [3]. [incompatible-return]

   cap.js:22:12
   22|     return p;
                  ^

References:
   cap.js:19:22
   19| export default class L {
                            ^ [1]
   cap.js:15:15
   15| declare class P<+R> {
                     ^ [2]
   cap.js:15:18
   15| declare class P<+R> {
                        ^ [3]



Found 1 error
